--- a/sass/components/_work-grid.scss
+++ b/sass/components/_work-grid.scss
@@ -7,6 +7,7 @@
   transition: transform 0.4s ease-out;
   @include for-desktop() {
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: $--spacing-l;
   }
   @include for-mobile() {
     grid-template-columns: repeat(1, 1fr);
